# xmake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODOS.md  Version  xmake.init  xmake.init.cmake  xmake.init.mk
cmake/: BuildLibok.cmake  ConfigAppImage.cmake  ConfigCpack.cmake  ConfigPkg.cmake  CopyWinDlls.cmake  PkgConfig.cmake  PkgInstaller.cmake  PreInstall.cmake  xbuild.cmake  xmake.cmake  xmake.init.cmake  xmake.init.mk  xmake.mk
cmake/xbuild/: CheckGitRepoInfo.cmake  CheckGitRepoInfo.cmake.in  CheckHostInfo.cmake  CheckHostSystem.cmake  Dependencies.cmake  DownloadExtract.cmake  GetGitRepoInfo.cmake  InstallHelper.cmake  PrintCmake.cmake  RepoTreeBuild.cmake  TarballBuild.cmake
cmake/xmake/: .gitignore  AppImageBuild.cmake  BuildGtest.cmake  CPackOptions.cmake.in  CheckGitRepoInfo.cmake  CheckGitRepoInfo.cmake.in  CheckHostInfo.cmake  CheckHostSystem.cmake  CodeCoverage.cmake  CompileFlags.cmake  CopyFiles.cmake  Dependencies.cmake  DownloadExtract.cmake  DoxygenHelper.cmake  ExportArgsToCc.cmake  GetGitRepoInfo.cmake  HostInfo.cmake  InstallHelper.cmake  NSIS.template.in  PackageConfig.cmake  PkgSrcConfig.cmake  PkgSrcPackage.cmake  PrebuildInstall.cmake  PreventInTreeBuilds.cmake  PrintCmake.cmake  PrintCmakeInfo.cmake  Qt5Helper.cmake  Qt5Static.cmake  Qt5StaticPlugin.cmake  QtIFW.cmake  RepoTreeBuild.cmake  SearchLibrary.cmake  TarballBuild.cmake  Utils.cmake  WindowsConfig.cmake  xmake.mk
cmake/xmake/appdir/: AppRun.in  app.desktop.in
cmake/xmake/doxygen/: Doxyfile.in  footer.html
cmake/xmake/help/: Makefile  dot_local
cmake/xmake/pkgconfig/: Config.cmake.in  pkgconfig.pc.in
docs/: APIs.md  help.md  local.mk
docs/doxygen/: CMakeLists.txt  Doxyfile.in  header.html
docs/manual/: index.html
scripts/: .release.sh  .sync-release.sh  .sync-repo-info.sh  package  release
scripts/env/: check.sh
scripts/env/setup/: debian.sh  macosx.sh  msys2.sh
scripts/qt5/: static-config.linux  static-config.macos
scripts/qt5/5.12.3/: static-build-linux
source/: awesome.c  bar-private.h  bar.c  bar.h  bar2.h  config.h.in  foo.h  hostinfo.c  libA.c  libA.h  libB.c  libB.h  libC.c  libC.h  library.c  library.h  macros.h  main.c  main.cpp  win.rc.in  xlc.h
source/ccr/: CMakeLists.txt  Makefile
source/ctest/: CMakeLists.txt
source/gtest/: CMakeLists.txt  example.cpp
source/qt5/: CMakeLists.txt  app.qrc  main.cpp  mainwindow.h
source/xihd/: CMakeLists.txt  XIHD.cmake  XIHD1.cmake  XIHD3.cmake
xdemo/: .gitignore  CMakeLists.txt  Makefile
xdemo/cmake/: BuildGtest.cmake  BuildLibok.cmake  ConfigAppImage.cmake  ConfigCpack.cmake  ConfigPkg.cmake  xmake  xmake.cmake  xmake.init.cmake  xmake.init.mk
xdemo/source/: bar-private.c  bar-private2.h  config.h.in  foo.c  foobar.c  foobar.h  hostinfo.c  hostinfo.cpp  macros.h  win.rc.in
xdemo/source/bar/: bar-private.c  bar-private.h  bar.c  bar.h
xdemo/source/ctest/: CMakeLists.txt
xdemo/source/gtest/: CMakeLists.txt
xdemo/source/qt5/: CMakeLists.txt  main.cpp
xdemo/source/xihd/: CMakeLists.txt  XIHD1.cmake  XIHD2.cmake
